fixed quantity display readability

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -47,12 +47,13 @@ html, body {
 %button {
 	border: none;
 	border-radius: $corner-radius;
-	padding: 12px 16px;
+	padding: 5px 16px;
 	color: $color-text-secondary;
 	background-color: $color-secondary;
 	font-family: $body-text;
 	cursor: pointer;
 	font-weight: 700;
+	font-size: 1.4em;
 }
 
 %button:hover {
@@ -291,6 +292,7 @@ html, body {
 	border-radius: $corner-radius $corner-radius 0 0;
 	font-size: 2rem;
 	padding: 0 2rem;
+	cursor: pointer;
 }
 
 .login-register-toggle .selected {
